# Criptext-Email-React-Client

./: .gitignore  CHANGELOG.md  README.md  electron-starter.js  install.js  package.json  react-switch-input-v0.1.5.tgz  start.js
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
db_interface/: CMakeList.txt  CMakeLists.txt  linux_setup.sh  macos_setup.sh  setup.sh
db_interface/src/: Connection.h  binding.gyp  dbUtils.cpp  dbUtils.h  db_logs.txt  main.cpp  ubuntu_binding.gyp
db_interface/src/axolotl/: Account.cpp  Account.h  AppSettings.cpp  AppSettings.h  CRFile.cpp  CRFile.h  Contact.cpp  Contact.h  DBUtils.cpp  DBUtils.h  Email.cpp  Email.h  EmailContact.cpp  EmailContact.h  EmailLabel.cpp  EmailLabel.h  FeedItem.cpp  FeedItem.h  FullEmail.cpp  FullEmail.h  IdentityKey.cpp  IdentityKey.h  Label.cpp  Label.h  PendingEvent.cpp  PendingEvent.h  PreKey.cpp  PreKey.h  SessionRecord.cpp  SessionRecord.h  SignedPreKey.cpp  SignedPreKey.h  Thread.cpp  Thread.h
db_interface/src/http/: http.cpp  http.h
db_interface/src/http/handlers/: cors.h  readDB.cpp  readDB.h
electron_app/: Criptext.db-journal  DBManager.js  Gruntfile.js  alice_logs.txt  converge_builds.sh  db_logs.txt  debian.json  electron-starter.js  models.js  mydb.db  notarize.js  package-lock.json  package.json
electron_app/installerResources/: clearBuild.sh  converge_builds.sh  debian.json  installerTypes.json  make_installer.sh  removeOldAppData-linux.sh  windows.json
electron_app/resources/: desktop.ejs
electron_app/src/: Account.js  AesCypher.js  errors.js  (+28 more)
email_composer/: package.json
email_dialog/: package.json
email_loading/: package.json
email_login/: .env  package.json
email_mailbox/: package-lock.json  package.json
email_pin/: package.json
public/: emails.json  feeds.json  index.html  labels.json  threads.json
signal_interface/: CMakeLists-linux.txt  CMakeLists-macos.txt  CMakeLists.txt  binding.gyp  binding.template.gyp  build.sh  install_deps.sh  linux_binding.gyp  linux_install_deps.sh  macos_binding.gyp  macos_install_deps.sh  main.cpp  release_alice.sh
signal_interface/installation/: criptext-encryption-service.desktop
signal_interface/installation/linux/: linux_binding.gyp  linux_install_deps.sh
signal_interface/installation/macos/: CMakeLists-macos.txt  macos_binding.gyp  macos_install_deps.sh
signal_interface/src/crypto/: base64.c  base64.h  crypto.c  crypto.h  signal.c  signal.cpp  signal.h  store.cpp  store.h
signal_interface/src/crypto/axolotl/: IdentityKeyStore.h  PreKeyStore.cpp  SessionStore.cpp  SignedPreKeyStore.cpp
signal_interface/src/crypto/protocol_store/: IdentityKeyStore.cpp  IdentityKeyStore.h  PreKeyStore.cpp  PreKeyStore.h  SessionStore.cpp  SessionStore.h  SignedPreKeyStore.cpp  SignedPreKeyStore.h  decode_utils.cpp  decode_utils.h  types.h
signal_interface/src/helpers/: utf8.c
signal_interface/src/http/: http.cpp  http.h
signal_interface/src/http/handlers/: cors.cpp  cors.h  decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  helpers.cpp  helpers.h  keyBundle.cpp  keyBundle.h  logger.h  password.cpp  password.h
src/: App.js  App.test.js  app.scss  index.js
(+1043 files in other folders)
